data/derived/fa15/progs/unify/prog4048.ml.out
Characters 85-100:
  |Sine (e1) -> sin(pi *. exprToString e1 );;
                          ^^^^^^^^^^^^^^^
Error: This expression has type expr but an expression was expected of type
         float
